# Rob-tica_y_Sistemas_Inteligentes

./: README.md  fredy.py
puzzlebot_sim/launch/: puzzlebot_launch.py
puzzlebot_sim/puzzlebot_sim/: joint_state_publisher.py
puzzlebot_sim/urdf/: puzzlebot.urdf
week1/puzzlebot_sim/launch/: puzzlebot_launch.py
week2/puzzlebot_sim2/: package.xml  setup.cfg  setup.py
week2/puzzlebot_sim2/launch/: puzzlebot_launch.py
week2/puzzlebot_sim2/puzzlebot_sim2/: joint_state_publisher.py
week2/puzzlebot_sim2/urdf/: puzzlebot.urdf
week3/kinematic_model/: package.xml  setup.cfg  setup.py
week3/kinematic_model/config/: robot_params.yaml
week3/kinematic_model/kinematic_model/: control.py  dead_reckoning_localization.py  joint_state_publisher.py  kinematic_simulator.py  localization.py  point_stabilizer.py  setpoint_generator.py  square_trajectory.py  triangle_trajectory.py
week3/kinematic_model/launch/: kinematic_control_launch.py  kinematic_localization_launch.py  kinematic_model_launch.py  multi_robot_launch.py  robot_group_launch.py
week3/kinematic_model/rviz/: puzzlebot_rviz.rviz
week3/kinematic_model/urdf/: puzzlebot.urdf
week4/multi_robot/: package.xml  setup.cfg  setup.py
week4/multi_robot/launch/: multi_robot_launch.py  robot_group_launch.py
week4/multi_robot/multi_robot/: kinematic_simulator.py  localization.py  setpoint_generator.py
week4/multi_robot/rviz/: puzzlebot_rviz.rviz
week4/multi_robot/urdf/: puzzlebot.urdf  puzzlebot_yellow.urdf
