<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinematic_model</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="a01735818@tec.mx">adrian</maintainer>
  <license>Apache-2.0</license>

  <depend>ros2launch</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>rviz2</depend>
  <depend>rqt_tf_tree</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
